--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -26,10 +26,10 @@
   width: 100%;
   padding: 1.5rem 2rem;
   position: fixed;
-  border-bottom: 1.5px solid var(--primaryColor);
-  background: #daa3a3;
+  border-bottom: 1.5px solid rgb(217, 216, 216);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
+  z-index: 1000;
 }
 .navBar .logoDiv {
   display: flex;
@@ -45,7 +45,7 @@
   .navBar .menu {
     position: absolute;
     width: 70%;
-    top: 8rem;
+    top: -100rem;
     right: 50%;
     left: 50%;
     transform: translate(-50%);
@@ -84,4 +84,7 @@
   left: 50%;
   color: var(--blackColor);
   transform: translate(-50%);
+}
+.navBar .showNavBar {
+  top: 8rem;
 }/*# sourceMappingURL=Navbar.css.map */
