--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -28,9 +28,9 @@
    width: 100%;
    padding: 1.5rem 2rem;
    position: fixed;
-   border-bottom: 1.5px solid var(--primaryColor);
-   background: #daa3a3;
+   border-bottom: 1.5px solid rgb(217, 216, 216);
    backdrop-filter: blur(5px);
+   z-index: 1000;
 
    .logoDiv {
       display: flex;
@@ -47,7 +47,7 @@
       .menu {
          position: absolute;
          width: 70%;
-         top: 8rem;
+         top: -100rem;
          right: 50%;
          left: 50%;
          transform: translate(-50%);
@@ -87,5 +87,9 @@
       left: 50%;
       color: var(--blackColor);
       transform: translate(-50%);
+   }
+
+   .showNavBar {
+      top: 8rem;
    }
 }
