--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-* {
-   padding: 0;
-   margin: 0;
-   box-sizing: border-box;
-   font-family: 'Montserrat', sans-serif;
-}
-
 :root {
    --primaryColor: hsl(14, 90%, 53%);
    --primaryColorLight: hsl(14, 96%, 91%);
@@ -19,13 +12,20 @@
    --cardColor: hsl(300, 3%, 94%);
    //  /Font ang Typography/
    --biggestFontSize: 2.5rem;
-   --h1FontSize: 2rem;
+   --h1FontSize: 1.6rem;
    --h2FontSize: 1.25rem;
    --h3FontSize: 1rem;
    --normalFontSize: 0.938rem;
    --smallFontSize: 0.813rem;
    --smallestFontSize: 0.75rem;
    --borderRadius: 3rem;
+}
+
+* {
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
+   font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -39,7 +39,7 @@ body {
 }
 
 .grid {
-   display: flex;
+   display: grid;
    align-items: center;
    gap: 1.5rem;
 }
