--- a/src/Components/Destinations/Destinations.scss
+++ b/src/Components/Destinations/Destinations.scss
@@ -147,3 +147,26 @@
       }
    }
 }
+
+@media screen and (min-width: 520px) {
+   .destination {
+      .secContainer {
+         .searchField {
+            grid-template-columns: repeat(2, 1fr);
+         }
+         .destinationContainer {
+            grid-template-columns: repeat(2, 1fr);
+         }
+
+        
+      }
+   }
+}
+
+// @media screen and (min-width: 1240px) {
+
+// }
+
+// @media screen and (min-width: 1440px) {
+
+// }
