--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -71,3 +71,121 @@
       display: flex;
    }
 }
+
+@media screen and (min-width: 480px) {
+   .home {
+      .sectionText {
+         padding: 0 2rem;
+         justify-content: center;
+         text-align: center;
+         width: 100%;
+
+         h1 {
+            font-size: var(--biggestFontSize);
+            font-weight: 900;
+         }
+         p {
+            padding: 1rem 0;
+            font-size: var(--h2FontSize);
+            max-width: 70%;
+            margin: auto;
+         }
+
+         .btn {
+            font-size: var(--h3FontSize);
+            margin: auto;
+         }
+      }
+   }
+}
+
+@media screen and (min-width: 769px) {
+   .home {
+      .sectionText {
+         width: 100%;
+         h1 {
+            font-size: 4rem;
+            font-weight: 900;
+            max-width: 70%;
+            margin: auto;
+         }
+         p {
+            padding: 1rem 0;
+            max-width: 70%;
+            margin: auto;
+         }
+
+         .btn {
+            gap: 0.5rem;
+            padding-left: 2rem;
+            padding-right: 2rem;
+            font-size: var(--h3FontSize);
+            margin: auto;
+         }
+      }
+   }
+}
+
+@media screen and (max-width: 1059px) {
+   .home {
+      .popularPlaces {
+         .content {
+            display: none;
+         }
+      }
+   }
+}
+
+@media screen and (min-width: 1060px) {
+   .home {
+      position: relative;
+
+      .popularPlaces {
+         display: block;
+         position: absolute;
+         bottom: 10%;
+         width: 100%;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+
+         .content {
+            h3 {
+               color: var(--whiteColor);
+               padding: 1rem;
+               position: relative;
+
+               &::after {
+                  content: '';
+                  width: 83%;
+                  height: 2px;
+                  background: #ada5a5;
+                  right: 0;
+                  bottom: 50%;
+                  position: absolute;
+               }
+            }
+            .images {
+               align-items: center;
+               justify-content: center;
+
+               img {
+                  height: 130px;
+                  width: 250px;
+                  object-fit: cover;
+                  border-radius: 10px;
+                  margin: 0 5px;
+               }
+            }
+         }
+      }
+   }
+}
+
+// @media screen and (min-width: 1240px) {
+
+// }
+
+// @media screen and (min-width: 1440px) {
+
+// }
