--- a/src/Components/Portifolio/Portifolio.css
+++ b/src/Components/Portifolio/Portifolio.css
@@ -22,15 +22,90 @@
 .portifolio .secContainer {
   gap: 2rem;
 }
-.portifolio .secContainer .leftContainer .grid .singlePortifolio {
+.portifolio .secContainer .leftContent .grid .singlePortifolio {
   gap: 1rem;
   align-items: flex-start;
 }
-.portifolio .secContainer .leftContainer .grid .singlePortifolio .iconDiv img {
+.portifolio .secContainer .leftContent .grid .singlePortifolio .iconDiv img {
   height: 50px;
   width: 50px;
 }
-.portifolio .secContainer .leftContainer .grid .singlePortifolio .info h4 {
-  padding-bottom: 2.5rem;
-  font-size: 40px;
+.portifolio .secContainer .leftContent .grid .singlePortifolio .info h4 {
+  padding-bottom: 0.5rem;
+}
+
+@media screen and (min-width: 480px) {
+  .portifolio .secContainer .leftContent .secHeading h3 {
+    font-size: var(--h2FontSize);
+  }
+  .portifolio .secContainer .leftContent .secHeading p {
+    font-size: var(--normalFontSize);
+    padding: 0.5rem 0;
+  }
+  .portifolio .secContainer .leftContent .grid .singlePortifolio {
+    gap: 1.5rem;
+  }
+  .portifolio .secContainer .leftContent .grid .singlePortifolio .iconDiv img {
+    height: 60px;
+    width: 60px;
+  }
+  .portifolio .secContainer .leftContent .grid .singlePortifolio .info h4 {
+    padding-bottom: 0.5rem;
+    font-size: var(--h3FontSize);
+  }
+}
+@media screen and (min-width: 635px) {
+  .portifolio .secContainer {
+    display: block;
+  }
+  .portifolio .secContainer .leftContent .secHeading h3 {
+    font-size: 2rem;
+  }
+  .portifolio .secContainer .leftContent .secHeading p {
+    font-size: var(--h3FontSize);
+  }
+  .portifolio .secContainer .leftContent .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .portifolio .secContainer .leftContent .grid .singlePortifolio {
+    gap: 1.5rem;
+  }
+  .portifolio .secContainer .leftContent .grid .singlePortifolio .iconDiv img {
+    height: 60px;
+    width: 60px;
+  }
+  .portifolio .secContainer .leftContent .grid .singlePortifolio .info h4 {
+    padding-bottom: 0.5rem;
+    font-size: var(--h3FontSize);
+  }
+  .portifolio .secContainer .rightContent {
+    margin: 20px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .portifolio .secContainer .rightContent img {
+    margin: auto;
+    max-width: 80%;
+  }
+}
+@media screen and (min-width: 820px) {
+  .portifolio .secContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .portifolio .secContainer .leftContent .secHeading h3 {
+    font-size: var(--h2FontSize);
+  }
+  .portifolio .secContainer .leftContent .secHeading p {
+    font-size: var(--h3FontSize);
+  }
+  .portifolio .secContainer .leftContent .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .portifolio .secContainer .leftContent .grid .singlePortifolio {
+    gap: 1.5rem;
+  }
+  .portifolio .secContainer .rightContent img {
+    max-width: 100%;
+  }
 }/*# sourceMappingURL=Portifolio.css.map */
