--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@ video {
 }
 
 .secHeading {
-  padding-bottom: 1.5rem;
+  padding-bottom: 1.3rem;
 }
 
 .btn .icon {
@@ -138,4 +138,14 @@ video {
   width: 10px;
   background: var(--primaryColor);
   border-radius: var(--borderRadius);
+}
+
+@media screen and (min-width: 840px) {
+  .section {
+    padding: 4rem 0 3rem;
+  }
+  .container {
+    width: 75%;
+    margin: auto;
+  }
 }/*# sourceMappingURL=App.css.map */
