--- a/src/App.scss
+++ b/src/App.scss
@@ -103,7 +103,7 @@ video {
 }
 
 .secHeading {
-   padding-bottom: 1.5rem;
+   padding-bottom: 1.3rem;
 }
 
 .btn .icon {
@@ -138,4 +138,21 @@ video {
    width: 10px;
    background: var(--primaryColor);
    border-radius: var(--borderRadius);
+}
+
+@media screen and (min-width: 840px) {
+   .section {
+      padding: 4rem 0 3rem;
+   }
+
+   .container {
+      width: 75%;
+      margin: auto;
+   }
+}
+
+@media screen and (min-width: 1240px) {
+}
+
+@media screen and (min-width: 1440px) {
 }
