--- a/src/Components/Destinations/Destinations.css
+++ b/src/Components/Destinations/Destinations.css
@@ -119,4 +119,13 @@
   font-size: var(--h3FontSize);
   font-weight: 600;
   color: var(--whiteColor);
+}
+
+@media screen and (min-width: 520px) {
+  .destination .secContainer .searchField {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .destination .secContainer .destinationContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }/*# sourceMappingURL=Destinations.css.map */
