--- a/src/Components/Middie/Middie.scss
+++ b/src/Components/Middie/Middie.scss
@@ -52,3 +52,26 @@
       }
    }
 }
+
+@media screen and (min-width: 640px) {
+   .middle {
+      .secContainer {
+         .grid {
+            grid-template-columns: repeat(3, 1fr);
+         }
+      }
+   }
+}
+
+@media screen and (min-width: 800px) {
+   .middle {
+      .secContainer {
+         .grid {
+            grid-template-columns: repeat(4, 1fr);
+         }
+      }
+   }
+}
+
+@media screen and (min-width: 1440px) {
+}
