--- a/src/Components/Questions/Questions.css
+++ b/src/Components/Questions/Questions.css
@@ -1,1 +1,102 @@
-/*# sourceMappingURL=Questions.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+:root {
+  --primaryColor: hsl(14, 90%, 53%);
+  --primaryColorLight: hsl(14, 96%, 91%);
+  --bgColor: hsl(0, 0%, 100%);
+  --formColor: hsl(20, 42%, 87%);
+  --whiteColor: hsl(0, 0%, 100%);
+  --blackColor: hsl(0, 0%, 18%);
+  --greyText: hsl(0, 0%, 51%);
+  --inputColor: hsl(330, 12%, 97%);
+  --cardColor: hsl(300, 3%, 94%);
+  --biggestFontSize: 2.5rem;
+  --h1FontSize: 1.6rem;
+  --h2FontSize: 1.25rem;
+  --h3FontSize: 1rem;
+  --normalFontSize: 0.938rem;
+  --smallFontSize: 0.813rem;
+  --smallestFontSize: 0.75rem;
+  --borderRadius: 3rem;
+}
+
+.accordionContainer {
+  border: 2px solid rgb(213, 213, 213);
+  border-radius: 12px;
+  padding: 2px;
+}
+.accordionContainer .title {
+  font-size: var(--normalFontSize);
+  align-items: center;
+  padding: 1rem;
+  border-radius: 10px;
+  justify-content: space-between;
+  background: var(--primaryColorLight);
+}
+.accordionContainer .title span {
+  cursor: pointer;
+  margin: 10px -6px 8px 0px;
+}
+.accordionContainer .title span .icon {
+  font-size: 1.2rem;
+  color: var(--blackColor);
+}
+.accordionContainer .destination {
+  font-size: var(--smallFontSize);
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  line-height: 20px;
+  white-space: normal;
+  transition: all 0.3s ease-in-out;
+  height: 140px;
+  opacity: 1;
+  padding: 0 1rem;
+  background: var(--cardColor);
+  border-radius: 0 0 20px 20px;
+  color: var(--blackColor);
+}
+.accordionContainer .hide {
+  height: 0;
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+.accordionContainer .activeTitle {
+  background: var(--primaryColorLight);
+  border-radius: 10px 10px 0 0;
+  width: 100%;
+}
+
+.questions .secHeading h3,
+.questions .secHeading h4 {
+  padding-bottom: 1.5rem;
+}
+.questions .secHeading p {
+  font-size: var(--smallestFontSize);
+  color: var(--blackColor);
+  padding-bottom: 1rem;
+}
+.questions .form .formContent {
+  gap: 1rem;
+}
+.questions .form .formContent input,
+.questions .form .formContent textarea {
+  background: var(--cardColor);
+  width: 100%;
+  padding: 10px 0 15px 20px;
+  border: none;
+  outline: none;
+  border-radius: var(--borderRadius);
+}
+.questions .form .formContent input::-moz-placeholder, .questions .form .formContent textarea::-moz-placeholder {
+  font-size: var(--smallestFontSize);
+  color: var(--blackColor);
+}
+.questions .form .formContent input::placeholder,
+.questions .form .formContent textarea::placeholder {
+  font-size: var(--smallestFontSize);
+  color: var(--blackColor);
+}
+.questions .form .formContent textarea {
+  height: 100px;
+  border-radius: 10px;
+}/*# sourceMappingURL=Questions.css.map */
