--- a/src/Components/Questions/Questions.css
+++ b/src/Components/Questions/Questions.css
@@ -99,4 +99,10 @@
 .questions .form .formContent textarea {
   height: 100px;
   border-radius: 10px;
+}
+
+@media screen and (min-width: 640px) {
+  .questions .secContainer {
+    display: flex;
+  }
 }/*# sourceMappingURL=Questions.css.map */
