--- a/src/Components/Questions/Questions.scss
+++ b/src/Components/Questions/Questions.scss
@@ -112,3 +112,11 @@
       }
    }
 }
+
+@media screen and (min-width: 640px) {
+   .questions {
+      .secContainer {
+         display: flex;
+      }
+   }
+}
