--- a/src/Components/Subscribe/Subscribe.css
+++ b/src/Components/Subscribe/Subscribe.css
@@ -28,4 +28,58 @@
 }
 .subscribe .secContainer .textDiv btn {
   padding: 0.5rem 2rem;
+}
+
+@media screen and (min-width: 450px) {
+  .subscribe .secContainer .imghihe {
+    max-width: 75%;
+    margin: auto;
+  }
+  .subscribe .secContainer .textDiv h4 {
+    font-size: 1.5rem;
+  }
+  .subscribe .secContainer .textDiv p {
+    padding: 1rem 0;
+  }
+  .subscribe .secContainer .textDiv .btn {
+    padding: 0.5rem;
+    font-size: var(--h2FontSize);
+  }
+}
+@media screen and (min-width: 640px) {
+  .subscribe .secContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .subscribe .secContainer .imghihe {
+    width: 100%;
+    margin: auto;
+  }
+  .subscribe .secContainer .textDiv h4 {
+    font-size: 2rem;
+  }
+  .subscribe .secContainer .textDiv p {
+    padding: 1rem 0;
+    font-size: var(--h3FontSize);
+  }
+  .subscribe .secContainer .textDiv .btn {
+    padding: 0.5rem;
+    font-size: var(--h2FontSize);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .subscribe .secContainer .imghihe {
+    width: 80%;
+    margin: auto;
+  }
+  .subscribe .secContainer .textDiv h4 {
+    font-size: var(--h1FontSize);
+  }
+  .subscribe .secContainer .textDiv p {
+    padding: 2rem 0;
+    font-size: var(--h2FontSize);
+  }
+  .subscribe .secContainer .textDiv .btn {
+    padding: 0.5rem;
+    font-size: var(--h2FontSize);
+  }
 }/*# sourceMappingURL=Subscribe.css.map */
