--- a/src/Components/Subscribe/Subscribe.scss
+++ b/src/Components/Subscribe/Subscribe.scss
@@ -39,3 +39,84 @@
       }
    }
 }
+
+@media screen and (min-width: 450px) {
+   .subscribe {
+      .secContainer {
+         .imghihe {
+            max-width: 75%;
+            margin: auto;
+         }
+
+         .textDiv {
+            h4 {
+               font-size: 1.5rem;
+            }
+
+            p {
+               padding: 1rem 0;
+            }
+
+            .btn {
+               padding: 0.5rem;
+               font-size: var(--h2FontSize);
+            }
+         }
+      }
+   }
+}
+
+@media screen and (min-width: 640px) {
+   .subscribe {
+      .secContainer {
+         grid-template-columns: repeat(2, 1fr);
+         .imghihe {
+            width: 100%;
+            margin: auto;
+         }
+
+         .textDiv {
+            h4 {
+               font-size: 2rem;
+            }
+
+            p {
+               padding: 1rem 0;
+               font-size: var(--h3FontSize);
+            }
+
+            .btn {
+               padding: 0.5rem;
+               font-size: var(--h2FontSize);
+            }
+         }
+      }
+   }
+}
+
+@media screen and (min-width: 1024px) {
+   .subscribe {
+      .secContainer {
+         .imghihe {
+            width: 80%;
+            margin: auto;
+         }
+
+         .textDiv {
+            h4 {
+               font-size: var(--h1FontSize);
+            }
+
+            p {
+               padding: 2rem 0;
+               font-size: var(--h2FontSize);
+            }
+
+            .btn {
+               padding: 0.5rem;
+               font-size: var(--h2FontSize);
+            }
+         }
+      }
+   }
+}
